Update all URLs to use xglacier.vercel.app
🔗 URL Updates:
- Updated GitHub App configuration (github-app.yml)
- Updated GitHub setup documentation (GITHUB_SETUP.md)
- Updated OAuth callback URLs in API routes
- Updated redirect URLs for production deployment

✅ All references now point to: https://xglacier.vercel.app

--- a/github-app.yml
+++ b/github-app.yml
@@ -3,9 +3,9 @@
 
 name: "Glacier AI Coding Tool"
 description: "AI-powered coding tool that integrates with GitHub for repository management and code generation"
-homepage_url: "https://glacier-ai.vercel.app"
-callback_url: "https://glacier-ai.vercel.app/auth/github/callback"
-webhook_url: "https://glacier-ai.vercel.app/api/github/webhook"
+homepage_url: "https://xglacier.vercel.app"
+callback_url: "https://xglacier.vercel.app/api/github/auth/callback"
+webhook_url: "https://xglacier.vercel.app/api/github/webhook"
 
 # Permissions
 permissions:
